# utf8f

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
doc/: api-doc-ford-settings.md  api-doc-index.md
include/: binary_search.h  category_table.h  codepoint.h  easta_category_table.h  easta_property_table.h  mask.h  width_CJK_table.h  width_table.h
src/: CMakeLists.txt  gen_unicode_table.py  mod_utf8f.f90  mod_utf8f_category.f90  mod_utf8f_codepoint.f90  mod_utf8f_easta_property.f90  mod_utf8f_len.f90  mod_utf8f_nbyte.f90  mod_utf8f_width.f90  unicode.py
test/: CJK.txt  CMakeLists.txt  UnicodeList.txt  test_codepoint.f90  test_u8func.f90  test_width.f90
